# romana

./: .gitignore  .prettierrc  README.md  package-lock.json  package.json  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  diesel.toml  tauri.conf.json
src-tauri/.config/: config.toml
src-tauri/db/: romana.db
src-tauri/db/migrations/2025-10-11-182850-0000_create_games/: down.sql  up.sql
src-tauri/db/scripts/: consoles.sql
src-tauri/migrations/2025-10-11-182850-0000_create_games/: down.sql  up.sql
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs
src-tauri/src/dat_parser/: mod.rs  parser.rs  system_name_helper.rs
src-tauri/src/models/: artwork.rs  artwork_type.rs  console.rs  console_location.rs  developer.rs  game.rs  mod.rs  region.rs  release.rs  release_region.rs  release_type.rs  rom.rs  rom_region.rs
src-tauri/src/rom_import/: mod.rs  rom_parser.rs
src-tauri/src/routes/: console_routes.rs  games_routes.rs  mod.rs  rom_routes.rs
src-tauri/src/schemas/: artwork_types.rs  artworks.rs  console_locations.rs  consoles.rs  developers.rs  games.rs  metadatas.rs  mod.rs  regions.rs  release_regions.rs  release_types.rs  releases.rs  rom_regions.rs  roms.rs
src/api/: consoles-api.ts  games-api.ts
src/components/: sidebar-icon.vue  sidebar-list-item.vue  sidebar.vue
src/components/common/: searchbar.vue  virtual-table-header-item.vue  virtual-table.vue
src/components/console-list/: add-console-modal.vue  console-list-item.vue  console-list.vue
src/components/rom-list/: rom-list-container.vue
src/components/rom-table/: rom-table-item.vue  rom-table.vue
src/stores/: consoleStore.ts  gameStore.ts  uiState.ts
src/styles/: global.css
src/types/: console.ts  game.ts  region.ts  rom.ts
