[package]
name = "romana"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "romana_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = {version = "2.3.2", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15.7"
rusqlite= {version = "*", features = ["bundled"] }
winnow = "0.7.13"
html-escape = "0.2.13"
toml = "0.9.8"
toml_edit = {version = "0.23.7", features = ["serde"] }
tauri-plugin-dialog = "2"
walkdir = "2.5.0"
crc-fast = "1.5.0"
sevenz-rust2 = "0.19.1"
thiserror = "2.0.17"
diesel-enums = { version = "0.1.0", features = ["sqlite"] }
strum = { version = "0.27.2", features = ["strum_macros"] }
strum_macros = "0.27.2"
natord = "1.0.9"

